storage/check_final.out
    Checking commonware-storage v0.0.64 (/Users/bayardo/src/commonwarexyz/monorepo/storage)
error: `T` does not live long enough
   --> storage/src/qmdb/current/ordered/fixed.rs:774:9
    |
774 |         async move { self.update(key, value).await }
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `T` does not live long enough
   --> storage/src/qmdb/current/ordered/fixed.rs:792:9
    |
792 |         async move { self.delete(key).await }
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `T` does not live long enough
   --> storage/src/qmdb/current/unordered/fixed.rs:649:9
    |
649 |         async move { self.update(key, value).await }
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `T` does not live long enough
   --> storage/src/qmdb/current/unordered/fixed.rs:667:9
    |
667 |         async move { self.delete(key).await }
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `write_batch_with_callback` found for mutable reference `&mut ...` in the current scope
   --> storage/src/qmdb/current/unordered/fixed.rs:689:17
    |
689 | ...       any.write_batch_with_callback(iter, mov...
    |           ----^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `&mut ...`
    |
    = note: the full name for the type has been written to '/Users/bayardo/src/commonwarexyz/monorepo/target/debug/deps/commonware_storage-ed49db13c9eee688.long-type-12504502658592627585.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0599]: no method named `push` found for mutable reference `&mut BitMap<..., N, ...>` in the current scope
   --> storage/src/qmdb/current/unordered/fixed.rs:690:24
    |
690 |                 status.push(append);
    |                        ^^^^ method not found in `&mut BitMap<..., N, ...>`
    |
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following trait defines an item `push`, perhaps you need to implement it:
            candidate #1: `criterion::stats::tuple::TupledDistributionsBuilder`
    = note: the full name for the type has been written to '/Users/bayardo/src/commonwarexyz/monorepo/target/debug/deps/commonware_storage-ed49db13c9eee688.long-type-6505640105415177229.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0599]: no method named `set_bit` found for mutable reference `&mut BitMap<..., N, ...>` in the current scope
   --> storage/src/qmdb/current/unordered/fixed.rs:692:28
    |
692 |                     status.set_bit(*loc, false);
    |                            ^^^^^^^
    |
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following trait defines an item `set_bit`, perhaps you need to implement it:
            candidate #1: `typenum::uint::SetBit`
help: there is a method `get_bit` with a similar name, but with different arguments
   --> storage/src/bitmap/authenticated.rs:156:5
    |
156 |     pub fn get_bit(&self, bit: u64) -> bool {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: the full name for the type has been written to '/Users/bayardo/src/commonwarexyz/monorepo/target/debug/deps/commonware_storage-ed49db13c9eee688.long-type-6505640105415177229.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `Db<..., ..., ..., ..., ..., N, ..., ...>: Deletable` is not satisfied
   --> storage/src/qmdb/current/unordered/fixed.rs:672:57
    |
672 | ...le for Db<E, K, V, H, T, N, S, D>
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Deletable` is not implemented for `Db<E, K, V, H, T, N, S, D>`
   --> storage/src/qmdb/current/unordered/fixed.rs:52:1
    |
 52 | / pub struct Db<
 53 | |     E: RStorage + Clock + Metrics,
 54 | |     K: Array,
 55 | |     V: FixedValue,
...   |
 60 | |     D: DurabilityState = Durable,
 61 | | > {
    | |_^
note: required by a bound in `Batchable`
   --> storage/src/kv/batch.rs:171:77
    |
170 | ...it Batchable:
    |       --------- required by a bound in this trait
171 | ...table<Key: Array, Value: Codec + Clone, Error = Error> + Updatable + Deletable
    |                                                                         ^^^^^^^^^ required by this bound in `Batchable`
    = note: the full name for the type has been written to '/Users/bayardo/src/commonwarexyz/monorepo/target/debug/deps/commonware_storage-ed49db13c9eee688.long-type-24335287457271193.txt'
    = note: consider using `--verbose` to print the full type name to the console
help: consider extending the `where` clause, but there might be an alternative better way to express this requirement
    |
680 |     D: DurabilityState + Send + Sync, current::unordered::fixed::Db<E, K, V, H, T, N, S, D>: Deletable
    |                                       ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0733]: recursion in an async block requires boxing
   --> storage/src/qmdb/any/db.rs:490:9
    |
490 |         async move { self.sync().await }
    |         ^^^^^^^^^^   ----------------- recursive call here
    |
    = note: a recursive `async fn` call must introduce indirection such as `Box::pin` to avoid an infinitely sized future

error[E0733]: recursion in an async block requires boxing
   --> storage/src/qmdb/any/db.rs:494:9
    |
494 |         async move { self.destroy().await }
    |         ^^^^^^^^^^   -------------------- recursive call here
    |
    = note: a recursive `async fn` call must introduce indirection such as `Box::pin` to avoid an infinitely sized future

Some errors have detailed explanations: E0277, E0599, E0733.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `commonware-storage` (lib) due to 10 previous errors
